@@ -1,0 +1,5 @@
+appliedkernels="2.6.31"
+source="smgl-logo-0.2-for-2.6.31.patch.bz2"
+source_url="http://download.sourcemage.org/distro/kernel/${source}"
+source_gpg="gurus.gpg:${source}.sig"
+gpg_source_url=${source_url}.sig
