@@ -1,5 +1,7 @@
 2009-09-10 Eric Sandall <sandalle@sourcemage.org>
 	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.22.patch: Support 2.6.30
+	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.31.patch: SMGL Logo 0.2
+	  patch for 2.6.31+ (Bug #15403)
 
 2009-09-10 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: 2.6.31
